[gd_scene load_steps=8 format=3 uid="uid://cimbnhhermucy"]

[ext_resource type="Theme" uid="uid://cxldawy7hnlku" path="res://default_theme.tres" id="1_63i3k"]
[ext_resource type="Script" uid="uid://k0vbt4r1gvu0" path="res://characters/ui/PartySummaryUI.gd" id="1_hokt6"]
[ext_resource type="PackedScene" uid="uid://b1ycsca7qo073" path="res://characters/ui/CharacterSummaryUI.tscn" id="2_dibcj"]
[ext_resource type="Texture2D" uid="uid://bu4i6uwbeww7j" path="res://assets/difficulty_atlas_texture_background.tres" id="2_kchre"]
[ext_resource type="Texture2D" uid="uid://daysrbhdeip5v" path="res://assets/difficulty_atlas_texture.tres" id="3_dibcj"]
[ext_resource type="Texture2D" uid="uid://bg87pigjk72d3" path="res://assets/icons/resources/coins.png" id="3_o1ncq"]
[ext_resource type="Texture2D" uid="uid://cj14q464lrv01" path="res://assets/icons/stats/attack.png" id="4_l0nhr"]

[node name="PartySummaryUI" type="MarginContainer" groups=["time"]]
offset_right = 200.0
offset_bottom = 748.0
theme = ExtResource("1_63i3k")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_hokt6")
character_summary_scene = ExtResource("2_dibcj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Party Strength:"

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
tooltip_text = "Power Level"
mouse_filter = 1
text = "5"
horizontal_alignment = 2

[node name="PowerRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
modulate = Color(0.878431, 0.764706, 0.537255, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Power Level"
texture = ExtResource("4_l0nhr")
expand_mode = 1
stretch_mode = 3

[node name="CoinsLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
tooltip_text = "Gold Pieces"
mouse_filter = 1
text = "5"
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
visible = false
modulate = Color(0.878431, 0.764706, 0.537255, 1)
layout_mode = 2
tooltip_text = "Gold Pieces"
texture = ExtResource("3_o1ncq")

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Party Equipment:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="LevelLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Level"
horizontal_alignment = 1

[node name="LevelBar" type="TextureProgressBar" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
texture_repeat = 2
layout_mode = 2
max_value = 5.0
step = 0.1
value = 2.5
texture_under = ExtResource("2_kchre")
texture_progress = ExtResource("3_dibcj")

[node name="CharacterSummariesScrollArea" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CharacterSummaries" type="VBoxContainer" parent="VBoxContainer/CharacterSummariesScrollArea"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/CharacterSummariesScrollArea/CharacterSummaries"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="CharacterSummaryUI" parent="VBoxContainer/CharacterSummariesScrollArea/CharacterSummaries" instance=ExtResource("2_dibcj")]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/CharacterSummariesScrollArea/CharacterSummaries"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="CharacterSummaryUI2" parent="VBoxContainer/CharacterSummariesScrollArea/CharacterSummaries" instance=ExtResource("2_dibcj")]
layout_mode = 2
size_flags_vertical = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/CharacterSummariesScrollArea/CharacterSummaries"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
